kubernetes/springboot-api-service/templates/service.yaml
---
# Source: springboot-api-service/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-springboot-api-service
  labels:
    helm.sh/chart: springboot-api-service-0.1.0
    app.kubernetes.io/name: springboot-api-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: springboot-api-service
    app.kubernetes.io/instance: release-name
