kubernetes/springboot-api-service/templates/ingress.yaml
---
# Source: springboot-api-service/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-springboot-api-service
  labels:
    helm.sh/chart: springboot-api-service-0.1.0
    app.kubernetes.io/name: springboot-api-service
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "latest"
    app.kubernetes.io/managed-by: Helm
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: "true"
spec:
  rules:
    - host: "springboot.api.local"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-springboot-api-service
                port:
                  number: 80
